crates/ink/tests/ui/abi/sol/fail/event-name-override-invalid2.rs
#[ink::event(name = "My-Event")]
pub struct Event {
    #[ink(topic)]
    pub topic: [u8; 32],
    pub field_1: u32,
}

fn main() {}
